@@ -53,3 +53,5 @@ $(objdir)/.config/.dir.stamp:
 $(CONFIG_H):
 	echo '/* This file is automatically generated. */' > $(objdir)/config.h
 	cat $(objdir)/.config/*.h >> $(objdir)/config.h 2>/dev/null || true
+
+$(eval $(call check-symbol-rule,ELF_GETSHDRSTRNDX,elf_getshdrstrndx,elf))
